# IOTJ_HBC_NET

./: .gitattributes  .gitignore  CITATION.cff  README.md  ieee_trans.mplstyle  pyproject.toml  requirements-hfss.txt  requirements.txt
data/: calibrated_library_sched.csv
hfss/scripts/: build_hbc_hfss_calibration.py  finalize_hfss_libraries.py  plot_hfss_ieee.py  plot_hfss_ieee_1x4.py  plot_hfss_ieee_4x1.py  plot_hfss_ieee_single_col.py  probe_aedt.py  probe_aedt.vbs  probe_pyaedt.py  pyaedt_smoke.py  render_hfss_model_figure.py  render_hfss_result_figures.py  run_hfss_calibration.py  run_hfss_review_experiments.py
hfss/torso_main/outputs/: analysis_frequency_plan.csv  case_manifest.csv  field_proxy_samples.csv  lit_cross_validation_template.csv  material_table.csv  physical_anchor_table.csv  physical_anchor_template.csv  run_summary.txt  sar_chi_correlation_template.csv  setup_table.csv  sparams_raw.csv  (+31 more)
main_experiment/: build_iter10_adaptive.py
main_experiment/Experiment_results/: __init__.py  baselines.py  data.py  gates.py  metrics.py  plotting.py  reports.py  revision_assets.py  run.py  scenarios.py  search.py  sim.py
main_experiment/tests/: test_experiment_results.py  test_lp_solver.py
scripts/: build_iter10_adaptive.py  rebuild_torso_manuscript_assets.py  render_main_figures_standard.py
src/hfss_paper_results/: config.py  data.py  gates.py  metrics.py  plotting.py  run.py  scenarios.py  search.py  sim.py
tests/: test_hfss_paper_results.py  test_lp_solver.py  test_render_main_figures_standard.py  test_torso_hfss_plan.py  test_torso_postprocess.py
(+10 files in other folders)
